praveen-kubernetes-folder/kubeschedulerconfiguration 1/kubernetes/kubernetestraining/ingress-controller/myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: nitesh99sharma/apacheserver-php:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    name: webapp
    app: webapp
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: webapp

---

apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: example-webapp-ingress
  labels:
    app: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "mysecret"
spec:
  rules:
  - host: www.niteshapp.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webapp
            port:
              number: 80
