praveen-kubernetes-folder/kubeschedulerconfiguration 1/kubernetes/kubernetestraining/ingress-controller/tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "50m"
          requests:
            cpu: 10m

---

apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: tomcat
  labels:
    name: tomcat
    app: tomcat
spec:
  ports:
    - port: 8080
  selector:
    app: tomcat

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tomcat-server
  labels:
    app: tomcat
  annotations:
   kubernetes.io/ingress.class: traefik
   traefik.ingress.kubernetes.io/auth-type: "basic"
   traefik.ingress.kubernetes.io/auth-secret: "mysecret"
spec:
  rules:
  - host: www.tomcat-server.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
